[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
rusty-d3d12 = { version = "0.5.2" }
anyhow = "1.0.75"
thiserror = "1.0.49"
winit = "0.28.7"
raw-window-handle = "0.5.2"
widestring = "1.0.2"
clap = "2.33"
memoffset = "0.9.0"
hassle-rs = "0.10.0"
simple_logger = "4.2.0"
static_assertions = "1.1.0"
cgmath = "0.18.0"
tobj = "4.0.0"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1